--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "author": "Anees",
   "license": "MIT",
   "dependencies": {
+    "ejs": "^3.1.10",
     "express": "^4.19.2"
   },
   "devDependencies": {
