--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
   "author": "Anees",
   "license": "MIT",
   "dependencies": {
+    "csurf": "^1.11.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "session": "^0.1.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
