--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   "author": "Anees",
   "license": "MIT",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "connect-mongodb-session": "^5.0.0",
     "csurf": "^1.11.0",
     "ejs": "^3.1.10",
     "express": "^4.19.2",
-    "mongodb": "^6.8.0",
-    "session": "^0.1.0"
+    "express-session": "^1.18.0",
+    "mongodb": "^6.8.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
