--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
     "ejs": "^3.1.10",
     "express": "^4.19.2",
     "express-session": "^1.18.0",
-    "mongodb": "^6.8.0"
+    "mongodb": "^6.8.0",
+    "multer": "^1.4.5-lts.1",
+    "uuid": "^11.0.3"
   },
   "devDependencies": {
     "nodemon": "^3.1.4"
