--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.18.0",
     "mongodb": "^6.8.0",
     "multer": "^1.4.5-lts.1",
+    "stripe": "^17.4.0",
     "uuid": "^11.0.3"
   },
   "devDependencies": {
